AARS with decompression fallback enabled.

--- a/aars/index.html
+++ b/aars/index.html
@@ -61,9 +61,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/aars.loader.js";
       var config = {
-        dataUrl: buildUrl + "/aars.data.gz",
-        frameworkUrl: buildUrl + "/aars.framework.js.gz",
-        codeUrl: buildUrl + "/aars.wasm.gz",
+        dataUrl: buildUrl + "/aars.data.unityweb",
+        frameworkUrl: buildUrl + "/aars.framework.js.unityweb",
+        codeUrl: buildUrl + "/aars.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Tuomas Närväinen",
         productName: "AARS",
