Add note about desktop.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
 <p>
 <a href="/aars/index.html">Advanced Aerodynamic Reconnaissance System Demo</a>
-<a href="/aars/aars_manual.pdf">(Manual)</a>
+<a href="/aars/aars_manual.pdf">(Manual)</a><br>
+(For desktop browsers.)
 </p>
 
 <p>
