Add note about known issues.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <p>
 <a href="/aars/index.html">Advanced Aerodynamic Reconnaissance System Demo</a>
 <a href="/aars/aars_manual.pdf">(Manual)</a><br>
-(For desktop browsers.)
+For desktop browsers. Due to WebGL limitations this demo may have sound and z-fighting issues that will not appear in the full desktop Windows/Mac/Linux release.
 </p>
 
 <p>
