Update main page.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ For desktop browsers. Due to WebGL limitations this demo may have sound and z-fi
 </p>
 
 <p>
-<a href="https://www.secretprojects.co.uk/threads/mcdonnell-douglas-hypersonic-designs.41996/">Some of my 3D art</a>
+<a href="https://www.secretprojects.co.uk/threads/mcdonnell-douglas-hypersonic-designs.41996/">Some of my 3D aviation art</a>
 </p>
 
 <p>
