--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content="Isinglass, Model 192, boost-glide, reconnaissance">
 <title>Tuomas Närväinen at Github</title>
 <style>
   body { background-color: Cornsilk; }
