Update 3D art references on main page.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@ For desktop browsers. Due to WebGL limitations this demo may have sound and z-fi
 </p>
 
 <p>
-<a href="https://www.secretprojects.co.uk/threads/mcdonnell-douglas-hypersonic-designs.41996/">Some of my 3D aviation art</a>
+<a href="https://www.secretprojects.co.uk/threads/mcdonnell-douglas-hypersonic-designs.41996/">My 3D aviation art of McDonnell Douglas hypersonic designs at Secret Projects Forum</a><br>
+<a href="https://www.secretprojects.co.uk/threads/bae-kingston-unmanned-fighter-aircraft-ufa.42828/">More: BAe Unmanned Fighter Aircraft (UFA)</a>
 </p>
 
 <p>
