Update main page.

--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
 <hr>
 
 <p>
-<a href="/aars/index.html">Advanced Aerodynamic Reconnaissance System Demo</a>
+<a href="/aars/index.html">AARS - AMI Mission Simulator Demo</a>
 <a href="/aars/aars_manual.pdf">(Manual)</a><br>
-For desktop browsers. Due to WebGL limitations this demo may have sound and z-fighting issues that will not appear in the full desktop Windows/Mac/Linux release.
+For desktop browsers. The Web demo has some known sound and z-fighting issues.
 </p>
 
 <p>
 <a href="https://www.secretprojects.co.uk/threads/mcdonnell-douglas-hypersonic-designs.41996/">My 3D aviation art of McDonnell Douglas hypersonic designs at Secret Projects Forum</a><br>
-<a href="https://www.secretprojects.co.uk/threads/bae-kingston-unmanned-fighter-aircraft-ufa.42828/">More: BAe Unmanned Fighter Aircraft (UFA)</a>
+<a href="https://www.secretprojects.co.uk/threads/x-30-nasp-composite-configuration-evolution.48494/">X-30 NASP composite configuration evolution</a><br>
+<a href="https://www.secretprojects.co.uk/threads/bae-kingston-unmanned-fighter-aircraft-ufa.42828/">BAe Unmanned Fighter Aircraft (UFA)</a>
 </p>
 
 <p>
